3 layer build works nice