@@ -16,7 +16,17 @@ RUN git clone https://github.com/edwardcapriolo/deliverance.git
 
 RUN cd /build/deliverance
 WORKDIR /build/deliverance
+#RUN --mount=type=cache,target=/root/.m2 cd /build/deliverance && mvn install -Dmaven.test.skip.exec=true -Dgpg.skip=true
+RUN --mount=type=cache,target=/root/.m2 cd /build/deliverance && mvn dependency:go-offline
+
+##################STAGE2#################
+FROM deliverance-base AS deliverance-sha
+ARG REPO_COMMIT_SHA=LATEST
+RUN cd /build/deliverance
+RUN git checkout $REPO_COMMIT_SHA
 RUN --mount=type=cache,target=/root/.m2 cd /build/deliverance && mvn install -Dmaven.test.skip.exec=true -Dgpg.skip=true
+
+
 
 FROM ecapriolo/jdk-25:0.0.1 AS deliverance
 RUN mkdir /deliverance
@@ -24,7 +34,7 @@ RUN apk add bash
 
 RUN addgroup -S deliverance && adduser -S -G deliverance -H -D deliverance
 RUN mkdir /deliverance/logs && chown deliverance:deliverance /deliverance/logs
-COPY --from=deliverance-base /build/deliverance/web/target/web-0.0.4-SNAPSHOT.jar /deliverance/web.jar
+COPY --from=deliverance-sha /build/deliverance/web/target/web-0.0.4-SNAPSHOT.jar /deliverance/web.jar
 COPY entry_point.sh /deliverance/entry_point.sh
 COPY inlinerules.json /deliverance/inlinerules.json
 COPY simple.properties /deliverance/
@@ -32,14 +42,20 @@ COPY simple.properties /deliverance/
 RUN chmod u+x /deliverance/entry_point.sh
 WORKDIR /deliverance
 USER deliverance
-#ENTRYPOINT ["java", "--add-modules", "jdk.incubator.vector", "--add-opens", "java.base/java.nio=ALL-UNNAMED", "-Xmx2G", "-jar", "web.jar"] 
 ENTRYPOINT ["/deliverance/entry_point.sh"] 
 EOF
 
+#SHA=$(curl -s 'https://api.github.com/repos/<you>/<your-repo>/commits' | jq -r '.[0].sha')
+SHA=610e5fd74af857c2082527d6f05b38f8771d6be1
+
 DOCKER_BUILDKIT=1 docker build \
---no-cache \
 --target deliverance-base \
 -t deliverance-base .
+
+DOCKER_BUILDKIT=1 docker build \
+--build-arg REPO_COMMIT_SHA=$SHA \
+--target deliverance-sha \
+-t deliverance-sha .  
 
 DOCKER_BUILDKIT=1 docker build \
 --target deliverance \
